--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -1,207 +1,161 @@
-@import url('https://fonts.googleapis.com/css?family=Bangers|Raleway&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Bangers&family=Oswald:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 *{
     box-sizing: border-box;
 }
-body{
-    overflow: hidden;
-
+.navbar{
+    padding: 1vw 4vh;
+    vertical-align: middle;
+    background-color: #181818;
 }
-.rect{
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: #fff;
-    animation-name: rect-off;
-    animation-duration: 1s;
-    animation-fill-mode: forwards;
-    animation-delay: 0.3s;
-    z-index: 2;
-}
-@keyframes rect-off{
-    from{
-        z-index: 2;
-    }
-    to{
-        z-index: -2;
-    }
-}
-.ellipse{
-    position: absolute;
-    left: 48vw;
-    top: 48vh;
-    width: 4vw;
-    height: 4vw;
-    border-radius: 50%;
-    background-color: transparent;
-    animation-name: ellipse-expand;
-    animation-duration: 1.3s;
-    animation-fill-mode: forwards;
-    animation-delay: 0.3s;
-    z-index: -1;
-}
-@keyframes ellipse-expand{
-    from{
-        width: 4vw;
-        height: 4vw;
-        left: 48vw;
-        top: 48vh;
-        z-index: 3;
-    }
-    to{
-        width: 150vw;
-        height: 150vw;
-        left: -25vw;
-        top: -50vh;
-        z-index: -1;
-        background-color: #ea003b;
-    }
-}
-header{
-    z-index: 1;
-}
-
-.hamburger-icon{
-    position: absolute;
-    left: 3vw;
-    top: -3vw;
-    animation-name: element-pop;
-    animation-duration: 0.6s;
-    animation-delay: 1.8s;
-    animation-fill-mode: forwards;
-}
-.fas{
-    transition: 0.3s all ease-in-out;
-}
-.fa-bars{
-    font-size: 3rem;
-    color: #fff;
-    cursor: pointer;
-    display: block;
-}
-.fa-times{
-    font-size: 3rem;
-    color: #181818;
-    cursor: pointer;
-    display: none;
-    text-shadow: 0px 10px 20px #a5a5a5;
-}
-nav{
-    margin: 0 0;
-    padding: 0 0;
-    width: 0vw;
-    transition: 0.3s all ease-in-out;
-    height: 100vh;
-    background-color: #FEF8FA;
-}
-nav ul{
-    margin:  0 0;
-    padding:  0 0;
-    padding-top: 30vh;
-    list-style-type: none;
-}
-nav li{
-    margin: 0 0;
-    padding: 0 0;
-    padding-top: 4vh;
-    padding-bottom: 4vh;
+html, body{
     width: 100%;
-    list-style-type: none;
-    text-align: center;
+    background-color: #fff;
 }
-nav ul li a{
-    display: none;
-    margin:  0 0;
-    padding:  0 0;
-    color: #181818;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1.3em;
-    text-decoration: none;
-    text-decoration-style: none;
-    text-align: center;
-    transition: 0.3s all ease-in-out;
-}
-nav ul li:hover {
-    background-color: #FCE7ED;
-}
-nav ul li a:hover{
-    text-decoration: none;
-    color: #181818;
-}
-.logo{
+.water-mark{
     position: absolute;
-    right: 3vw;
-    top: -3vw;
+    top: 150vh;
+    left: 30vw;
+    color: #eeeeee;
+    transform: rotate(-45deg);
+}
+.water-mark h2{
+    font-size: 15rem;
+    font-weight: 900;
+    letter-spacing: 0.5rem;
     font-family: 'Bangers', cursive;
+}
+nav .navbar-brand{
+    font-family: 'Bangers', sans-serif;
+    color: #f6f6f6;
     font-size: 3rem;
-    color: #fff;   
-    animation-name: element-pop;
-    animation-duration: 0.6s;
-    animation-delay: 1.8s;
-    animation-fill-mode: forwards;
 }
-.container-fluid{
-    position: absolute;
-    left: 0;
-    top: -100vh;
-    transition: 0.3s all ease-in-out;
-    animation-name: element-pop-1;
-    animation-duration: 0.5s;
-    animation-delay: 1.7s;
-    animation-fill-mode: forwards;
+.navbar-nav .nav-item .nav-link{
+    font-family: 'Playfair Display', serif;
+    color: #f6f6f6;
+    font-size: 1.2rem;
 }
-.container-fluid .row{
-    margin-top: 30vh;
-}
-.container-fluid .row .col-sm-10{
+#banner{
+    padding: 6vw 8vh;
+    background-color: #181818;
+    height: 84vh;
+} 
+#banner h1{
+    font-family: 'Playfair Display', serif;
+    color: #f6f6f6;
+    margin-top: 3rem;
+    font-size: 4rem;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
 }
-.container-fluid .row .col-sm-10 span{
-    position: relative;
-    width: 8vw;
-    height: 8vw;
-    top: -8vw;
-    left: 1vw;
-    text-align: center;
+#banner p{
+    width: 85%;
+    margin-top: 3rem;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: 'Playfair Display', serif;
+    color: #f6f6f6;
+    font-size: 1.2rem;
+}
+#contact-form{
+    padding: 4rem 4rem;
+}
+#contact-form form{
+    width: 82%;
+    padding: 4% 4%;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: 'Playfair Display', serif;
+    color: #181818;
+    font-size: 1.2rem;
+    border-radius: 5px;
     background-color: #fff;
-    box-shadow: 0px 4px 10px #a3a3a3;
-    border-radius: 50%;
 }
-.container-fluid .row .col-sm-10 span .fa-user{
-    font-size: 5rem;
-    color: #ea003b;
-    margin-top: 20%;
+#contact-form form input{
+    background-color: #ECE6E7;
 }
-.col-sm-10 .card{
-    padding: 3% 3%;
-    font-family: 'Montserrat', sans-serif;
-} 
-.col-sm-10 .card .card-title{
-    margin-top: -15vh;
-    margin-bottom: 3vw;
-    font-size: 2.5rem;
-    font-weight: bold;
+#contact-form textarea{
+    resize: none;
+    background-color: #ECE6E7;
 }
-.col-sm-10 .card .card-text{
-    font-size: 1.3rem;
-    font-weight: bold;
+#contact-form .btn{
+    background-color: #181818;
+    color: #fff;
+    font-weight: lighter;
 }
-@keyframes element-pop{
-    from{
-        top: -3vw;
+#contact-form h3{
+    font-family: 'Playfair Display', serif;
+    color: #181818;
+    font-size: 2.3rem;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+#contact-form hr{
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    width: 90%;
+    background-color: #ccc;
+    margin-left: auto;
+    margin-right: auto;
+}
+#contact-form p{
+    font-family: 'Playfair Display', serif;
+    color: #181818;
+    font-size: 1.2rem;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+
+
+/* Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
+    .navbar{
+        padding: 1rem 1rem;
+    } 
+    .water-mark{
+        top: 15vh;
+        left: -70vw;
+        transform: rotate(-60deg);
     }
-    to{
-        top: 3vw;
+    .water-mark h2{
+        font-size: 15rem;
+        font-weight: 900;
+        letter-spacing: 0.5rem;
+        font-family: 'Bangers', cursive;
     }
+    #banner{
+        padding: 2rem 1rem;
+    } 
+    #contact-form{
+        padding: 2rem 1rem;
+    }
+    #contact-form form{
+        width: 88%;
+        padding: 6% 6%;
+        margin-bottom: 3rem;
+    }  
+
 }
-@keyframes element-pop-1{
-    from{
-        top: -100vw;
-    }
-    to{
-        top: 5vw;
-    }
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767.98px) { 
+
 }
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) { 
+
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) { 
+
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {  }
